Add reviews and how it works sections to index.html

--- a/index.html
+++ b/index.html
@@ -722,6 +722,8 @@ Code
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#benefits">Benefits</a></li>
+                <li><a href="#reviews">Reviews</a></li>
+                <li><a href="#how-it-works">How It Works</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -765,7 +767,7 @@ Code
     </section>
 
     <!-- Testimonials Section -->
-    <section class="testimonials">
+    <section id="reviews" class="testimonials">
         <h2 class="section-title">What Our Clients Say</h2>
         <div class="testimonials-grid">
             <div class="testimonial-card">
@@ -828,7 +830,7 @@ Code
     </section>
 
     <!-- How It Works Section -->
-    <section class="how-it-works">
+    <section id="how-it-works" class="how-it-works">
         <h2 class="section-title">How It Works</h2>
         <div class="steps-container">
             <div class="step-card">
